# pyls

./: .gitignore  README.md  pyls.py  pyproject.toml  setup.cfg
pyls/: pyls.py
pyls.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
tests/: test_pyls.py
