[metadata]
name = pyls
version = 0.1.0
description = A Python implementation of the ls command.
author = rickypaul07
author_email = ricky.official6@gmail.com
license = MIT
license_files = LICENSE
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/rickypaul07/pyls
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11

[options]
packages = find:
python_requires = >=3.6
include_package_data = true

[options.entry_points]
console_scripts =
    pyls = pyls.pyls:main
